add javafx module@2